--- a/src/javascript/bronze/Test.html
+++ b/src/javascript/bronze/Test.html
@@ -5,8 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-
+읭...
 </body>
 <script>
+    var fs = require('fs');
+    var input = fs.readFileSync('/dev/stdin').toString().split(' ');
+    var a = parseInt(input[0]);
+    var b = parseInt(input[1]);
+    console.log(a + b);
+
+
+
 </script>
 </html>
