--- a/src/javascript/bronze/Test.html
+++ b/src/javascript/bronze/Test.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
 읭...
-</body>
 <script>
-    var fs = require('fs');
-    var input = fs.readFileSync('/dev/stdin').toString().split(' ');
+    const fs = require('readline');
+    // var input = fs.readFileSync('/dev/stdin').toString().split(' ');
+    const input =`30 20`.split(' ');
     var a = parseInt(input[0]);
     var b = parseInt(input[1]);
+    console.log(a);
     console.log(a + b);
 
 
 
 </script>
+</body>
+
 </html>
